# helferbiene-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: handler.rs  lib.rs  main.rs
src/commands/: mod.rs  ping.rs  server_info.rs
src/minecraft/: activity.rs  client.rs  mod.rs  text_component.rs  varint.rs  varstring.rs
src/minecraft/packet/: handshake.rs  mod.rs  slp.rs
