[package]
name = "helferbiene-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
color-thief = "0.2.2"
colored = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.2"
image = { version = "0.24.8", default-features = false, features = ["png"] }
itertools = "0.12.1"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
serenity = "0.12.0"
tokio = { version = "1.36.0", features = ["full"] }
